--- a/src/styles/_layouts.scss
+++ b/src/styles/_layouts.scss
@@ -1,5 +1,42 @@
 .container {
-    width: 300px;
-    height: 300px;
-    background-color: tomato;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  width: 900px;
+  height: 900px;
+}
+
+.img {
+  display: block;
+  
+  width: 600px;
+  height: 700px;
+  border-radius: 50%;
+  margin: 0;
+
+  -webkit-box-shadow: 15px 15px 30px 0px rgba(87,72,87,1);
+  -moz-box-shadow: 15px 15px 30px 0px rgba(87,72,87,1);
+  box-shadow: 15px 15px 30px 0px rgba(87,72,87,1);
+  // width: 100%;
+  // height: auto;
+
+  color: #FFFFFF;
+  background: #333333;
+  box-shadow: #FFF 0px 0px 65px, #FFF 0px 0px 10px, #FFF 0px 0px 25px;
+}
+
+
+.title {
+  font-size: 42px;
+  font-weight: 700;
+  line-height: 1.56;
+  letter-spacing: 0.03em;
+
+  color: #FFFFFF;
+  text-shadow: 3px 5px 2px #474747;
+  color: #545dab;
+
+  text-shadow: -1px -1px 1px rgba(255,255,255,.1), 1px 1px 1px rgba(0,0,0,.5), 4px 5px 5px #545dab;
 }
