--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -14,6 +14,7 @@ body {
   justify-content: center;
   align-items: center;
   font-family: "Raleway", sans-serif;
+  height: 100vh;
 
   background: rgb(71, 78, 139);
   background: linear-gradient(
