--- a/src/styles/_layouts.scss
+++ b/src/styles/_layouts.scss
@@ -4,15 +4,17 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  width: 900px;
-  height: 900px;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  width: 700px;
+  height: 700px;
 }
 
 .img {
   display: block;
   
-  width: 600px;
-  height: 700px;
+  width: 400px;
+  height: 500px;
   border-radius: 50%;
   margin: 0;
 
@@ -28,6 +30,7 @@
   line-height: 1.56;
   letter-spacing: 0.03em;
   color: #545dab;
+  margin-bottom: 50px;
 
   text-shadow: -1px -1px 1px rgba(255,255,255,.1), 1px 1px 1px rgba(0,0,0,.5), 4px 5px 5px #545dab;
 }
